--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-authentication",
+  "name": "wtp",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -18,6 +18,8 @@
     "eslint-plugin-import": "^1.8.1",
     "eslint-plugin-jsx-a11y": "^1.3.0",
     "eslint-plugin-react": "^5.1.1",
+    "grunt": "^1.0.1",
+    "grunt-contrib-jshint": "^1.1.0",
     "mocha": "^2.5.3",
     "supertest": "^1.2.0"
   },
