--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-react": "^5.1.1",
     "grunt": "^1.0.1",
     "grunt-contrib-jshint": "^1.1.0",
+    "load-grunt-tasks": "^3.5.2",
     "mocha": "^2.5.3",
     "supertest": "^1.2.0"
   },
